--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     font-weight: 400;
     line-height: 1.5;
     margin: 20px;
-    text-align: justify;
+    text-align: center;
   }
   
   video {
