--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	</header>
 	<main>
 		<section>
-			<h2 class="video">Video</h2>
+			<h2 class="video">TECRA</h2>
 			<video controls>
         <source src="video tectra rs.mp4" type="video/mp4">
       </video>
