--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
 </head>
 <body>
 	<header>
-		<h1>video tectra</h1>
+		<h1>tectra</h1>
 	</header>
 	<main>
 		<section>
-			<h2 class="video">TECRA</h2>
 			<video controls>
         <source src="video tectra rs.mp4" type="video/mp4">
       </video>
