--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   
   /* Header styles */
   header {
-    background-color: #fffefe;
+    background-color: rgb(4, 197, 155);
     color: #fff;
     padding: 20px;
     text-align: center;
