--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   
   /* Footer styles */
   footer {
-    background-color: rgb(4, 197, 155);
-    color: #fff;
+    background-color: rgb(240, 240, 240);
+    color: rgb(4, 197, 155);
     padding: 20px;
     text-align: center;
     font-size: 0.9em;
